# notifyai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: basic_auth.py  main.py
tests/: test_main.py
