[project]
name = "notifyai"
version = "0.1.0"
description = ""
authors = [
    {name = "khalmatay", email = "khalmatay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.32.3,<3.0.0",
    "flask (>=3.1.0,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
