[project]
name = "notifyai"
version = "0.1.0"
description = ""
authors = [
    {name = "khalmatay", email = "khalmatay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.32.3,<3.0.0",
    "flask (>=3.1.0,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-deadfixtures = "^2.2.1"
types-requests = "^2.32.0.20250306"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
